external-crates/move/crates/move-compiler/tests/development/enums/matching/const_opt_result.exp
error[E13003]: feature is under active development
  ┌─ tests/development/enums/matching/const_opt_result.move:7:17
  │
7 │     public enum Option<T> {
  │                 ^^^^^^ Enums are not supported in bytecode.
  │
  = This feature is currently in development.

